app/assets/stylesheets/bootstrap-generators.css.scss
@import "bootstrap-variables";
@import "bootstrap";

body {
  padding-top: $navbar-height + 10px;
}

.pad-top-10px {
  padding-top: 10px;
}

.pad-left-5px {
  padding-left: 5px;
}

.marg-left-15px {
  margin-left: 15px;
}

.page-header {
  a.btn {
    float: right;
  }

  a.btn + a.btn {
    margin-right: 8px;
  }
}

.content {
  background-color: #eee;
  padding: 20px;
  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
  -webkit-border-radius: 0 0 6px 6px;
  -moz-border-radius: 0 0 6px 6px;
  border-radius: 0 0 6px 6px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
  box-shadow: 0 1px 2px rgba(0,0,0,.15);
}

